@@ -1,3 +1,9 @@
+2009-09-10  David Gilbert  <david.gilbert@object-refinery.com>
+
+    Bug fix by Jim Goodwin:
+    * source/org/jfree/chart/MouseWheelHandler.java
+    (handleZoomable): Respect domain/rangeZoomable fields in ChartPanel.
+
 2009-09-04  David Gilbert  <david.gilbert@object-refinery.com>
 
     Patch 2850344 by Martin Hoeller:
